improve directory selection for beos bug 267219 p=Niels.Reedijk@gmail.com r=thesuckiestemail r=sergei_d